setting username via user profile page
